--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,20 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header class="navbar navbar-fixed-top nabvar-inverse">
+      <div class="container">
+        <%= link_to "sample app", '#', id: "logo" %>
+        <nav>
+          <ul class="nav nabvar-nav nabvar-right">
+            <li><%= link_to "home", '#' %></li>
+            <li><%= link_to "help", '#' %></li>
+            <li><%= link_to "Log in", '#' %></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
