some styles added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,13 @@
   </head>
 
   <body>
-    <header class="navbar navbar-fixed-top nabvar-inverse">
+    <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
         <%= link_to "sample app", '#', id: "logo" %>
         <nav>
-          <ul class="nav nabvar-nav nabvar-right">
-            <li><%= link_to "home", '#' %></li>
-            <li><%= link_to "help", '#' %></li>
+          <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to "Home",   '#' %></li>
+            <li><%= link_to "Help",   '#' %></li>
             <li><%= link_to "Log in", '#' %></li>
           </ul>
         </nav>
