--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,9 +3,9 @@
     <%= link_to "sample app", '#', id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home",   '#' %></li>
-        <li><%= link_to "Help",   '#' %></li>
-        <li><%= link_to "Log in", '#' %></li>
+        <li><%= link_to "Home", static_pages_home_path %></li>
+        <li><%= link_to "Help",   static_pages_help_path %></li>
+        <li><%= link_to "Contact", static_pages_contact_path %></li>
       </ul>
     </nav>
   </div>
