--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,11 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "sample app", '#', id: "logo" %>
+    <%= link_to "sample app", static_pages_home_url, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", static_pages_home_path %></li>
         <li><%= link_to "Help",   static_pages_help_path %></li>
-        <li><%= link_to "Contact", static_pages_contact_path %></li>
+        <li><%= link_to "Log in", '#' %></li>
       </ul>
     </nav>
   </div>
