--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,11 @@
+<% provide(:title, @user.name) %> <!-- inherits from the application layout and provude the name as a title -->
+
+<!-- adding an avatar image -->
+<h1>
+    <%= gravatar_for @user %>
+    <%= @user.name %>
+</h1>
+
 <%= @user.name %>, <%= @user.email %> 
 <%= @user.created_at %> 
 <%= @user.updated_at %>
