--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 
 <!-- adding an avatar image -->
 <h1>
-    <%= gravatar_for @user %>
+    <%= gravatar_for(@user) %>
     <%= @user.name %>
 </h1>
 
