--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <% if logged_in? %>
- <%= render('logged') %>
+  <%= render 'shared/logged' %>
 <% else %>
- <%= render('not_logged') %>
+  <%= render 'shared/not_logged' %>
 <% end %>
